SUBDIRS =

if USE_PANEL_APPLICATIONS
SUBDIRS += applications
endif

if USE_PANEL_DATETIME
SUBDIRS += datetime
endif

if USE_PANEL_DEVICES
SUBDIRS += devices
endif

if USE_PANEL_MUSIC
SUBDIRS += music
endif

if USE_PANEL_MYZONE
SUBDIRS += myzone
endif

if USE_PANEL_NETWORKS
SUBDIRS += networks
endif

if USE_PANEL_PEOPLE
SUBDIRS += people
endif

if USE_PANEL_POWER_ICON
SUBDIRS += power-icon
endif

if USE_PANEL_STATUS
SUBDIRS += status
endif

if USE_PANEL_WEB
SUBDIRS += web
endif

if USE_PANEL_ZONES
SUBDIRS += zones
endif

if USE_PANEL_BLUETOOTH
SUBDIRS += bluetooth
endif
